updated image file path

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h3><a href="#">www.driver.com</a></h3>
         </div>
         <div class="img-container">
-        <img src="/img/ford-focus-yellow-car.PNG" alt="cab image" width='650'>
+        <img src="img/ford-focus-yellow-car.png" alt="cab image" width='650'>
         </div>
     </section>
     
